<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/transparent_black"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:padding="25dp"
            android:layoutAnimation="@anim/layout_animation"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textSize="35sp"/>

                <TextView
                    android:id="@+id/version_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="v1.0"
                    android:layout_gravity="bottom"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="15sp"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/created_by"
                android:layout_marginTop="45dp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <ImageView
                android:id="@+id/stx_logo"
                android:focusable="true"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                android:src="@drawable/logo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/source_code"
                android:layout_marginTop="45dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/source_code_url"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credits"
                android:textColor="@android:color/white"
                android:layout_marginTop="25dp"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/first_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/second_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>